5月8日，排除了随机数错误的版本

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,6 +11,8 @@ SET(SRC_LIST main.cpp
         Simulator.cpp
         SSALNS.cpp
         Timer.cpp
+        LoadBench.cpp
+        SaveBench.cpp
         tinystr.cpp
         tinyxml.cpp
         tinyxmlerror.cpp
